# hello-axum

./: Cargo.toml  docker-compose.yml  justfile  stress.yml
examples/messages/: new.sh
examples/topics/: new.sh
examples/users/: me.sh  new.sh
src/: main.rs
src/authorization/: basic.rs
src/dto/: message.rs  mod.rs  topic.rs  user.rs
src/repositories/: message_repository.rs  mod.rs  topic_repository.rs  user_repository.rs
